# Leds

./: .gitignore  README.md  led.py  leds.service  pyproject.toml  requirements.txt  test.requirements.txt
.github/workflows/: test.yml
docs/: circuit.cddx
leds/: __main__.py  adapter.py  app.py  button_exmple.py  dto.py  interfaces.py  state.py
leds/infrastructure/: adapter.py  consts.py
tests/: app_test.py  conftest.py  constants.py  state_test.py
tests/mocks/: board_adapter.py  button_adapter.py  led_adapter.py
