[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["leds"]

[project]
name = "leds"
version = "0.0.1"
readme = "README.md"
authors = [
    { name = "Yuriy Chebyshev", email = "bomzheg@gmail.com" },
]
license = { file = "LICENSE" }
description = "few experimtns with Orange PI leds"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'RPi.GPIO~=0.7.1',
]

[project.urls]
"Homepage" = "https://github.com/bomzheg/shvatka_mario_leds"

[project.scripts]
start = "leds.__main__:main"


[tool.black]
line-length = 99
target-version = ['py310', 'py311']
include_trailing_comma = true
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[tool.ruff]
line-length = 99

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.flake8]
ignore = ['E203', 'E231', 'E241', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
exclude = ["venv", "venv_wsl"]
max-line-length = 99
max-complexity = 10
count = true
statistics = true
exit-zero = true

[tool.mypy]
strict = true
exclude = "venv"

[[tool.mypy.overrides]]
module = "OPi.*"
ignore_missing_imports = true
